# zhuochuangzhihui

./: .gitignore  Makefile  README.md  Untitled Diagram.drawio  build.sh  deploy.sh  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  release.yml  scan.yml
api/: Makefile  index.js  package-lock.json  package.json
auto/resource/: cli_res.resource  dev_res.resource  rest_res.resource
auto/test_field/: field_opt.resource  postive_test.robot
auto/test_order/: order_opt.resource  order_test.robot
auto/test_running/: dev_err_test.robot  postive_test.robot  running_opt.resource  scale_sm_info.robot
base/: Makefile  include.h
base/db_orm/: zh_db_config.cpp  zh_db_config.h
base/file_up_down/: file_up_down.cpp  file_up_down.h
base/idl/: idl.thrift
base/utils/: CMakeLists.txt  tdf_timer.cpp  tdf_timer.h  utils.cpp  utils.h
base/zyzl_plugin/: zh_zyzl.cpp  zh_zyzl.h
conf/: nginx.conf
gui/: App.vue  main.js  manifest.json  package-lock.json  package.json  pages.json  uni.scss
gui/pages/: detail.vue  device.vue  index.vue  login.vue  myself.vue  req_que.vue
results/: log.html  output.xml  report.html
service/: CMakeLists.txt
service/cli/: device_cli.cpp  device_cli.h  main.cpp  rbac_cli.cpp  rbac_cli.h  rule_cli.cpp  system_cli.cpp
service/core/: main.cpp
service/device/: driver.h  main.cpp
service/device/drivers/: common_scale_driver.h  id_reader.cpp  mock_driver.cpp  zs_plate_cam.cpp
service/lib/: config_management_imp.cpp  config_management_imp.h  device_management_imp.cpp  device_management_imp.h  order_center_imp.cpp  order_center_imp.h  rbac_center_imp.cpp  rbac_center_imp.h  rpc_include.h
zh_back/: Makefile  main.cpp
zh_back/local_dev/: CMakeLists.txt  yaml2json
zh_back/local_dev/device_driver/: abs_device_driver.cpp  abs_device_driver.h
zh_back/local_dev/device_driver/fake_cam/: fake_cam.cpp
zh_back/local_dev/device_driver/hk_monitor/: HCNetSDK.h  hk_monitor.cpp  zh_hk_gate.cpp  zh_hk_gate.h
zh_back/local_dev/device_driver/kl_scale/: kl_scale.cpp
zh_back/local_dev/device_driver/ser_id_reader/: ser_id_reader.cpp
zh_back/local_dev/device_driver/ser_printer/: DP_Print_lib.cpp  ser_printer.cpp
zh_back/local_dev/device_driver/ser_qr_reader/: ser_qr_reader.cpp
zh_back/local_dev/device_driver/zs_cam/: zs_cam.cpp
zh_back/local_dev/process_manager/: main.cpp
zh_back/local_dev/state_machine/: state_machine_cli.cpp  state_machine_common.h
zh_back/local_dev/state_machine/gate_sm1/: gate_sm1.cpp
zh_back/local_dev/state_machine/lib/: state_machine_control.cpp  state_machine_control.h
zh_back/local_dev/state_machine/scale_sm1/: scale_sm1.cpp  scale_sm1.h
zh_back/local_dev/utils/: local_utils.cpp  local_utils.h
zh_back/zh_database/: CMakeLists.txt  sqlite_orm.cpp  sqlite_orm.h  sqlite_orm_tree.h  zh_db_config.cpp  zh_db_config.h
zh_back/zh_device_mock/: CMakeLists.txt  main.cpp
zh_back/zh_hk_gate/: CMakeLists.txt  CMakelists.txt  main.cpp
zh_back/zh_hk_gate/lib/: HttpUtil.h  zh_hk_gate.cpp  zh_hk_gate.h
zh_back/zh_id_reader/: CMakeLists.txt  zh_id_read_test.cpp
zh_back/zh_id_reader/lib/: zh_id_reader.cpp  zh_id_reader.h
zh_back/zh_log/: CMakeLists.txt  zh_log.cpp  zh_log.h
zh_back/zh_manual_tool/: CMakeLists.txt  main.cpp
zh_back/zh_printer/: CMakeLists.txt  main.cpp  raadme.txt
zh_back/zh_printer/lib/: DP_Print_inc.h  DP_Print_lib.cpp  zh_printer.cpp  zh_printer.h
zh_back/zh_qr/: CMakeLists.txt
zh_back/zh_qr/lib/: zh_qr_lib.cpp  zh_qr_lib.h
zh_back/zh_raster/: CMakeLists.txt  zh_raster_test.cpp
zh_back/zh_raster/lib/: zh_raster.cpp  zh_raster.h
zh_back/zh_rest_server/: .gitignore  Makefile  index.js  package-lock.json  package.json
zh_back/zh_rpc_server/: CMakeLists.txt  contract_management_imp.cpp  contract_management_imp.h  open_api_imp.cpp  open_api_imp.h  plugin_management_imp.cpp  plugin_management_imp.h  stuff_management_imp.cpp  stuff_management_imp.h  system_management_imp.cpp  system_management_imp.h  user_management_imp.cpp  user_management_imp.h  vehicle_management_imp.cpp  vehicle_management_imp.h  vehicle_order_center_imp.cpp  vehicle_order_center_imp.h  zh_rpc_util.cpp  zh_rpc_util.h
zh_back/zh_scale/: CMakeLists.txt  zh_scale_test.cpp
zh_back/zh_scale/lib/: zh_scale.cpp  zh_scale.h
zh_back/zh_tdf/: CMakeLists.txt  tdf_include.h  tdf_main.cpp  tdf_timer.cpp  tdf_timer.h
zh_back/zh_tdf/test/: timer_test.cpp
zh_back/zh_traffic_light/: CMakeLists.txt  main.cpp
zh_back/zh_vcom/: CMakeLists.txt  zh_vcom_link.cpp  zh_vcom_link.h
zh_digram/: zczh.vpp  zczh.vpp.bak_000f  zczh.vpp.bak_001d  zczh.vpp.bak_002d  设备状态机.vpp.bak_000f  车辆状态机.vpp  车辆状态机.vpp.bak_000f  车辆状态机.vpp.bak_001d  车辆状态机.vpp.bak_002d
zh_external/: Makefile  test.c
zh_external/led_sample/: busy.txt  empty.txt  enter_scale.txt  exit_scale.txt  holding.txt  no_call  no_confirm.txt  no_order.txt
zh_external/printer/: HWISPRTPrinter.h  Makefile  testMain.c
zh_external/pull_ticket_pic_sample/: Dockerfile  cap_index.js  docker_entry_point.sh  store_file.sh  upload_img.sh
zh_external/script/: Makefile
zh_front/: Makefile
zh_front/zh_manage/: .env.prod  .env.test  .env.test_serve  .gitignore  README.md  package-lock.json  package.json  vue.config.js
zh_front/zh_manual_tool/: .env.prod  .env.test  README.md  package-lock.json  package.json  vue.config.js
zh_front/zh_ordors_tool/: README.md  package.json  (+1 more)
zh_plugin/: Makefile
zh_plugin/zh_hnnc/: CMakeLists.txt  main.cpp
zh_plugin/zh_hnnc/lib/: zh_hnnc.cpp  zh_hnnc.h
zh_plugin/zh_ods_nyj/: CMakeLists.txt  main.cpp
zh_plugin/zh_ods_nyj/lib/: zh_ods_nyj.cpp  zh_ods_nyj.h
zh_plugin/zh_ordos_ticket/: CMakeLists.txt  main.cpp
zh_plugin/zh_ordos_ticket/lib/: zh_ordos_ticket.cpp  zh_ordos_ticket.h
zh_plugin/zh_test_plugin/: .gitignore  CMakeLists.txt  main.cpp
zh_plugin/zh_zyhl/: CMakeLists.txt  main.cpp
zh_plugin/zh_zyhl/lib/: zh_zyhl.cpp  zh_zyhl.h
zh_plugin/zh_zyzl/: CMakeLists.txt  main.cpp
zh_plugin/zh_zyzl/lib/: zh_zyzl.cpp  zh_zyzl.h
zh_pub/: Makefile
zh_test_cases/: make_test_case.py
(+124 files in other folders)
